# jadx-mcp-plugin

./: .gitignore  README.md  fastmcp_adapter.py  main.py  pyproject.toml  settings.gradle
plugin/: build.gradle  jadx-mcp-plugin.code-workspace
plugin/src/main/java/com/mobilehackinglab/jadxplugin/: McpPlugin.java  McpPluginOptions.java  MethodExtractor.java
