[project]
name = "jadx-mcp-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mcp>=1.13.1", "requests>=2.32.5"]

[project.scripts]
# Installs an executable named `jadx-mcp` that calls fastmcp_adapter.main()
jadx-mcp = "fastmcp_adapter:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project provides a single module file `fastmcp_adapter.py`.
# Instruct setuptools to install it as a py_module so it becomes importable
# and the console script can reference it as `fastmcp_adapter:main`.
py-modules = ["fastmcp_adapter"]
